# ResearchOS

./: .gitignore  Cargo.toml  README.md  dfx.json  fix_build.sh  simple_setup.sh
agents/: Cargo.toml
agents/src/: lib.rs
canister/: Cargo.toml  research_ai_canister.did
canister/src/: http_client.rs  lib.rs  storage.rs  types.rs
cli/: Cargo.toml
cli/src/: main.rs
research_ai_simple/: Cargo.toml  README.md  demo_user_journey.sh  dfx.json  researchos.sh  setup_researchos.sh  simple_setup.sh  test.sh  test_agent_canister.sh  ui.html
research_ai_simple/local/: canister_ids.json  network-id
research_ai_simple/local/canisters/research_ai_simple_backend/: index.js  research_ai_simple_backend.wasm
research_ai_simple/researchos-neural/: index.html
research_ai_simple/src/backend/: index.js  inject-canister.js  package-lock.json  package.json  server.js
research_ai_simple/src/backend/public/: index-configured.html  index.html
research_ai_simple/src/backend/public/css/: style.css
research_ai_simple/src/backend/views/: index.ejs
research_ai_simple/src/research_ai_simple_backend/: Cargo.toml  research_ai_simple_backend.did
research_ai_simple/src/research_ai_simple_backend/src/: lib.rs
research_ai_simple/src/research_ai_simple_backend/src/backend/: index.js  package.json
research_ai_simple/src/research_ai_simple_backend/src/backend/public/css/: style.css
research_ai_simple/src/research_ai_simple_backend/src/backend/views/: index.ejs
