[package]
name = "research_ai_simple_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
candid_parser = "0.1.0"

[profile.release]
lto = true
opt-level = 'z'